=======
CHANGES
=======

3.7.2 (unreleased)
------------------

- Use the zope.component API in favor of ztapi.

3.7.1 (2009-05-18)
------------------

- Remove dependencies on ``zope.container``.  Instead import
  ``Object*Event`` classes from ``zope.lifecycleevent`` and import
  ``IContained`` from ``zope.location``.  In order to be able to do
  this, depend on ``zope.lifecycleevent``>=3.5.2 and
  ``zope.location``>=3.5.4.

- Remove a dependency on ``zope.container.contained.Contained``
  (this is a dumb base class that defines __parent__ and __name__
  as None and declares that the class implements IContained).

3.7.0 (2009-02-01)
------------------

- Split out this package from ``zope.app.intid``. The latter one
  now only contains browser views and compatibility imports while
  whole IntId functionality is moved here. 