@@ -52,8 +52,10 @@ setup(name = 'zope.intid',
       packages=find_packages('src'),
       package_dir = {'': 'src'},
       namespace_packages=['zope'],
-      extras_require = dict(test=['zope.app.testing',
-                                  'zope.site']),
+      extras_require = dict(test=['zope.testing',
+                                  'zope.site',
+                                  'zope.traversing',
+                                  'zope.container',]),
       install_requires = ['setuptools',
                           'ZODB3',
                           'zope.lifecycleevent>=3.5.2',
